# electronic-mcp-server

./: .gitignore  DEPLOYMENT.md  EXAMPLES.md  LICENSE  PROJECT_COMPLETE.md  README.md  pyproject.toml  ref.md  server.json
.github/skills/arduino-code-generator/: SKILL.md
.github/skills/arduino-code-generator/.claude-plugin/: marketplace.json
.github/skills/arduino-code-generator/assets/: workflow.mmd
.github/skills/arduino-code-generator/examples/: README.md  buttons-example.ino  config-example.ino  csv-example.ino  data-logging-example.ino  filtering-example.ino  hardware-detection-example.ino  i2c-example.ino  scheduler-example.ino  state-machine-example.ino
.github/skills/arduino-project-builder/: SKILL.md
.github/skills/battery-selector/: SKILL.md
.github/skills/bom-generator/: SKILL.md
.github/skills/circuit-debugger/: SKILL.md
.github/skills/code-review-facilitator/: SKILL.md
.github/skills/datasheet-interpreter/: SKILL.md
.github/skills/enclosure-designer/: SKILL.md
.github/skills/error-message-explainer/: SKILL.md
.github/skills/freertos-patterns/: SKILL.md
.github/skills/mermaid-diagram-generator/: SKILL.md
.github/skills/power-budget-calculator/: SKILL.md
.github/skills/readme-generator/: SKILL.md
.github/workflows/: python-publish.yml
memory-bank/: README.md  SESSION.md  activeContext.md  master-plan.md  projectbrief.md
memory-bank/research/: mcp-server-patterns.md
servers/: __init__.py  __main__.py  capacitor_calculator.py  combined_server.py  gpio_reference.py  resistor_decoder.py
tests/: __init__.py  test_capacitor_calculator.py  test_gpio_reference.py  test_resistor_decoder.py
(+54 files in other folders)
